--- a/hooks/build
+++ b/hooks/build
@@ -20,4 +20,4 @@ docker create --rm --name "test-${DOCKER_TAG}"  "${IMAGE_NAME}" && {
         docker rm "test-${DOCKER_TAG}"
         exit 1
     } 
-} || docker rm "test-${DOCKER_TAG"} || true
+} || docker rm "test-${DOCKER_TAG}" || true
